# comet_bot

./: .gitignore
cosmet_bot/: Cargo.toml  config.json
cosmet_bot/src/: application.rs  args.rs  config.rs  errors.rs  main.rs  tg_bot.rs  tg_handlers.rs  tg_objects.rs  tg_utils.rs
