[package]
name = "cosmet_bot"
version = "0.1.0"
edition = "2021"
authors = ["Dmitry Matiukhov <dimmarvel@mail.ru>"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.0.18", features = ["derive"] }
log = "0.4"
env_logger = "0.10.0"
